src/styles/global.css
@tailwind base;
@tailwind components;
@tailwind utilities;

/* FONT FACES*/
@layer base {
  /* headers */
  @font-face {
    font-family: "MuseoModerno";
    src: url("/fonts/MuseoModerno-Medium.woff2") format("woff2"),
      url("/fonts/MuseoModerno-Medium.woff") format("woff");
    font-weight: 500;
    font-style: normal;
    font-display: swap;
  }
  @font-face {
    font-family: "MuseoModerno";
    src: url("/fonts/MuseoModerno-MediumItalic.woff2") format("woff2"),
      url("/fonts/MuseoModerno-MediumItalic.woff") format("woff");
    font-weight: 500;
    font-style: italic;
    font-display: swap;
  }
  
  /* text */
  /* text: normal*/
  @font-face {
    font-family: "Rubik";
    src: url("/fonts/rubik-light-webfont.woff2") format("woff2"),
        url("/fonts/rubik-light-webfont.woff") format("woff");
    font-weight: 300;
    font-style: normal;
    font-display: swap;
  }
  @font-face {
    font-family: "Rubik";
    src: url("/fonts/rubik-regular-webfont.woff2") format("woff2"),
        url("/fonts/rubik-regular-webfont.woff") format("woff");
    font-weight: 400;
    font-style: normal;
    font-display: swap;
  }
  @font-face {
    font-family: "Rubik";
    src: url("/fonts/rubik-medium-webfont.woff2") format("woff2"),
        url("/fonts/rubik-medium-webfont.woff") format("woff");
    font-weight: 500;
    font-style: normal;
    font-display: swap;
  }
  @font-face {
    font-family: "Rubik";
    src: url("/fonts/rubik-bold-webfont.woff2") format("woff2"),
        url("/fonts/rubik-bold-webfont.woff") format("woff");
    font-weight: 700;
    font-style: normal;
    font-display: swap;
  }
  
  /* text: italic */
  @font-face {
    font-family: "Rubik";
    src: url("/fonts/rubik-lightitalic-webfont.woff2") format("woff2"),
        url("/fonts/rubik-lightitalic-webfont.woff") format("woff");
    font-weight: 300;
    font-style: italic;
    font-display: swap;
  }
  @font-face {
    font-family: "Rubik";
    src: url("/fonts/rubik-italic-webfont.woff2") format("woff2"),
        url("/fonts/rubik-italic-webfont.woff") format("woff");
    font-weight: 400;
    font-style: italic;
    font-display: swap;
  }
  @font-face {
    font-family: "Rubik";
    src: url("/fonts/rubik-mediumitalic-webfont.woff2") format("woff2"),
        url("/fonts/rubik-mediumitalic-webfont.woff") format("woff");
    font-weight: 500;
    font-style: italic;
    font-display: swap;
  }
  @font-face {
    font-family: "Rubik";
    src: url("/fonts/rubik-bolditalic-webfont.woff2") format("woff2"),
        url("/fonts/rubik-bolditalic-webfont.woff") format("woff");
    font-weight: 700;
    font-style: italic;
    font-display: swap;
  }

  /* CODE */
  @font-face {
    font-family: "Cascadia";
    src: url("/fonts/cascadia-webfont.woff2") format("woff2"),
        url("/fonts/cascadia-webfont.woff") format("woff");
    font-weight: 400;
    font-style: normal;
    font-display: swap;
  }

  /* MY COMMENTS */
  @font-face {
    font-family: "Note_This";
    src: url("/fonts/note_this-webfont.woff2") format("woff2"),
        url("/fonts/note_this-webfont.woff") format("woff");
    font-weight: 400;
    font-style: normal;
    font-display: swap;
  }
  
}

/* COMPONENTS */
@layer base {
  html {
    @apply bg-mr-bg antialiased
  }
  body {
    @apply bg-mr-bg antialiased
  }
  h1, h2, h3, h4, h5, h6 {
    @apply font-museo_moderno tracking-wider text-mr-text-headers
  }
  h1 {
    @apply text-2xl
  }
  h2 {
    @apply text-xl
  }
  h3 {
    @apply text-lg
  }
  h4 {
    @apply text-base
  }
  h5, h6 {
    @apply text-sm
  }
  p {
    @apply font-rubik text-sm text-mr-text-content font-normal tracking-wide leading-relaxed
  }
  a {
    @apply font-museo_moderno tracking-wider text-mr-text-headers
  }
  blockquote {
    @apply font-rubik text-base border-l-2 pl-4 my-2 text-mr-text-relax
  }
  li {
    @apply font-rubik text-sm text-mr-text-content font-normal tracking-wide leading-relaxed mb-2
  }
}

/* CUSTOM CLASSES */
@layer components {
  .my-comment {
    @apply font-comment text-sm text-mr-text-content tracking-wider
  }
  .coding {
    @apply font-code text-xs text-mr-text-content
  }
  .nav-essay_path {
    @apply text-mr-neon-pink border-mr-neon-pink
  }
  .nav-bookNotes_path {
    @apply text-mr-neon-gold border-mr-neon-gold
  }
  .nav-about_path {
    @apply text-mr-neon-blue border-mr-neon-blue
  }
  .logo-essay_path {
    @apply text-mr-neon-pink
  }
  .logo-bookNotes_path {
    @apply text-mr-neon-gold
  }
  .logo-about_path {
    @apply text-mr-neon-blue
  }
 
}

